[gd_scene load_steps=2 format=2]

[ext_resource path="res://Overlap/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
